Added Framework Documentation.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,11 +3,11 @@ title: BUDDYWORKS Docs
 description: All the details you could ever need.
 template: splash
 hero:
-  tagline: Welcome to our documentation page.
+  tagline: Welcome to our documentation page. Here you will find various documentations of our assets to reference.
   image:
     file: ../../assets/Logo_2.png
   actions:
-    - text: Browse...
+    - text: Browse
       link: /welcome/intro/
       icon: right-arrow
       variant: primary
