Added Avatar Scene Docs, more fancy formatting.

--- a/src/content/docs/framework/intro.mdx
+++ b/src/content/docs/framework/intro.mdx
@@ -2,11 +2,12 @@
 title: BUDDYWORKS Avatar Framework
 description: Quick-start your creation process, every time!
 ---
+import { Aside } from '@astrojs/starlight/components';
 
 *Quick-start your creation process, every time!*
 
-### Welcome to the Avatar Framework docs.  
+#### Welcome to the Avatar Framework docs.  
 This page will explain various aspects of the framework, from its usage to more advanced applications.  
 
-> **Note:** This page refers to Framework v2, but this should mostly apply to v1 as well.
+<Aside> We generally assume Framework v2, but this should mostly apply to v1 as well.</Aside>
 
