--- a/src/content/docs/framework/structure-FX.mdx
+++ b/src/content/docs/framework/structure-FX.mdx
@@ -2,13 +2,14 @@
 title: BUDDYWORKS Avatar Framework - FX Structure
 description: Quick-start your creation process, every time!
 ---
+import { Aside } from '@astrojs/starlight/components';
 
 **The FX-Template**
 
 The FX template is named "\_BW_FX".  
 It contains the essential layers commonly used by avatars, you can duplicate and expand as you see fit.  
 
-> **Note:** v1 and v2 almost have the same FX Controller, the only difference is a slightly different approach with the Presets Layer. 
+<Aside> v1 and v2 have almost the same FX Controller, the only difference is a slightly different approach with the Presets Layer. </Aside>
 
 
 
@@ -16,7 +17,7 @@ It contains the essential layers commonly used by avatars, you can duplicate and
 
 ![Menu preview](./img/003.png)  
 
-> **Note:** The animator is written in full WriteDefaults ON workflow, please keep that in mind.
+<Aside type="caution"> The animator is written in full WriteDefaults ON workflow, please keep that in mind.</Aside>
 
 - **Base:** Obligatory, make sure it is empty at all times.
 - **Left/Right Hand**: Layers for face expressions made with your hands.
