--- a/src/content/docs/framework/structure-menu.mdx
+++ b/src/content/docs/framework/structure-menu.mdx
@@ -2,14 +2,16 @@
 title: BUDDYWORKS Avatar Framework - Menu Structure
 description: Quick-start your creation process, every time!
 ---
+import { Aside } from '@astrojs/starlight/components';
 
 **Overall Menu Layout**
 
 BUDDYWORKS Menus are prefixed with "\_BW".  
 The menu comes with my lovely programmer-art as substitute icons, you probably want to replace those for your own icons.
 
-> **Note:** The structure for v2 is heavily slimmed down compared to v1, which used to be a bit convoluted. v2 prefers speedy use, while v1 prefers a fully fledged folder structure.   
-Both are fine when used correctly.
+<Aside>The structure for v2 is heavily slimmed down compared to v1, which used to be a bit convoluted.  
+v2 prefers speedy use, while v1 prefers a fully fledged folder structure.   
+**Both are fine when used correctly.**</Aside>
 
 ### Main Menu
 
