Changed wording in main page.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: BUDDYWORKS Docs
 description: All the details you could ever need.
 template: splash
 hero:
-  tagline: Welcome to our documentation page. Here you will find various documentations of our assets to reference.
+  tagline: Welcome to our documentation page. Here you will find instructions and explanations for our assets. 
   image:
     file: ../../assets/Logo_2.png
   actions:
