Added Poses Extension Docs

--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -7,5 +7,8 @@ import { Aside } from '@astrojs/starlight/components';
 *Locomotion-agnostic pose framework.*
 
 #### Welcome to the Poses Extension Docs
+Poses Extension is a Locomotion-agnostic pose/emote framework prefilled with various poses made for photography.  
 
-## WIP
+The following pages will tell you some things about the system.
+
+<Aside>Please be aware that Poses Extension is under constant development, and information in the docs might get outdated.</Aside>
