--- a/src/content/docs/posesextension/setup.mdx
+++ b/src/content/docs/posesextension/setup.mdx
@@ -24,7 +24,10 @@ Please assume that Poses Extension will only work with the latest version of GoG
 <Aside>The regular version will work in any case, even in a setup with GoGo Loco.</Aside>
 
 ### And the other options?
-You will see two additional options in the toolbar menu, these are just for convenience and allow you to spawn in the regular GoGo Loco prefabs.
+The two last options allow you to spawn in the regular GoGo Loco VRCFury prefabs.  
+These options exist for convenience.
+
+If you want to be able to fly with GoGo Loco, you pick the "Beyond" version, else use the "All" one.
 
 ### Some items are greyed out!
 PE performs checks to ensure that the necessary component is present in your project.  
