Doc and Style adjustments.

--- a/src/content/docs/framework/intro.mdx
+++ b/src/content/docs/framework/intro.mdx
@@ -4,6 +4,8 @@ description: Quick-start your creation process, every time!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
+![Product Banner.](./img/banner.png)  
+
 *Quick-start your creation process, every time!*
 
 #### Welcome to the Avatar Framework docs.  
