--- a/src/content/docs/framework/setup.mdx
+++ b/src/content/docs/framework/setup.mdx
@@ -3,7 +3,9 @@ title: BUDDYWORKS Avatar Framework - Setup
 description: Quick-start your creation process, every time!
 ---
 
-**Installation Instructions**  
+![Product Banner.](./img/banner.png)  
+
+## Installation Instructions
 Getting started is simple, just grab the package from our <a href="https://repo.buddyworks.wtf">VCC Repository</a> and import it into your project.  
 
 After import, you can add the resource data into your /Assets/ folder using the new Toolbar Menu:  
