--- a/src/content/docs/framework/structure-FX.mdx
+++ b/src/content/docs/framework/structure-FX.mdx
@@ -4,7 +4,9 @@ description: Quick-start your creation process, every time!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-**The FX-Template**
+![Product Banner.](./img/banner.png)  
+
+## The FX-Template
 
 The FX template is named "\_BW_FX".  
 It contains the essential layers commonly used by avatars, you can duplicate and expand as you see fit.  
