--- a/src/content/docs/framework/structure-menu.mdx
+++ b/src/content/docs/framework/structure-menu.mdx
@@ -4,7 +4,9 @@ description: Quick-start your creation process, every time!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-**Overall Menu Layout**
+![Product Banner.](./img/banner.png)  
+
+## Overall Menu Layout
 
 BUDDYWORKS Menus are prefixed with "\_BW".  
 The menu comes with my lovely programmer-art as substitute icons, you probably want to replace those for your own icons.
