--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -4,6 +4,8 @@ description: Locomotion-agnostic pose framework.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
+![Product Banner.](./img/banner.png)  
+
 *Locomotion-agnostic pose framework.*
 
 #### Welcome to the Poses Extension Docs
