--- a/src/content/docs/scene/overview.mdx
+++ b/src/content/docs/scene/overview.mdx
@@ -4,6 +4,8 @@ description: Ready to go Scene for fancy avatar deployments.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
+![Product Banner.](./img/banner.png)  
+
 #### About the Scene
 
 ![The scene's hierarchy.](./img/002.png)  
