--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -33,4 +33,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     Locomotion-agnostic pose framework.  
     <a class="button" href="/posesextension/intro">Inspect<Icon name="right-arrow" /></a>
   </Card>
+  <Card title="Toolbox" icon="sun">
+    Various tools for avatars.  
+    <a class="button" href="/toolbox/intro">Examine<Icon name="right-arrow"/></a>
+  </Card>
 </CardGrid>
