Updated placeholder with ever so slight snark.

--- a/src/content/docs/toolbox/overview.mdx
+++ b/src/content/docs/toolbox/overview.mdx
@@ -4,5 +4,7 @@ description: Various tools for avatars.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-#### WIP
+#### There will be words here, sooner or later.
+
+Toolbox is still in development, the documentation will be finished when the time is right.
 
