--- a/src/content/docs/toolbox/setup.mdx
+++ b/src/content/docs/toolbox/setup.mdx
@@ -6,4 +6,6 @@ import { Aside } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Steps } from '@astrojs/starlight/components';
 
-### WIP
+#### There will be words here, sooner or later.
+
+Toolbox is still in development, the documentation will be finished when the time is right.
