Added Expressions Extension Docs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -33,6 +33,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     Locomotion-agnostic pose framework.  
     <a class="button" href="/posesextension/intro">Inspect<Icon name="right-arrow" /></a>
   </Card>
+  <Card title="Expressions Extension" icon="moon">
+    Gimmick for face expression mixing, useful for photography.
+    <a class="button" href="/expressionsextension/intro">Observe<Icon name="right-arrow" /></a>
+  </Card>
   <Card title="Toolbox" icon="sun">
     Various tools for avatars.  
     <a class="button" href="/toolbox/intro">Examine<Icon name="right-arrow"/></a>
