--- a/src/content/docs/posesextension/setup.mdx
+++ b/src/content/docs/posesextension/setup.mdx
@@ -13,13 +13,14 @@ Setup is easy, just add the prefab to your avatar and you are ready to go!
 
 ### Which version to pick?
 As you might have seen, there are a couple options to choose from:
-- **Spawn Prefab... [VRCFury] =** The default version of Poses Extension
-- **Spawn Prefab GGL-Variant Prefab... [VRCFury] =** A variant of Poses Extension for GoGo Loco
-- **Spawn Prefab... [ModularAvatar] =** A version of the Standalone PE for ModularAvatar.
+- **Spawn Standalone Prefab... [VRCFury]:** The full version of Poses Extension.
+- **Spawn GGL-Variant Prefab... [VRCFury]:** A variant of Poses Extension for GoGo Loco
+- **Spawn Prefab... [ModularAvatar]:** A version of the Standalone PE for ModularAvatar.
 
 To save parameter space in GoGo Loco setups, the GGL-Variant will make use of existing GGL parameters, specifically Go/Float and Go/VRCEmote. This makes Poses Extension free to use, but adds a breaking point whenever GoGo Loco does any major changes.  
+Also, the GGL-Variant does not include all features Standalone does, please keep that in mind.
 
-Please assume that Poses Extension will only work with the latest version of GoGo Loco. Any other release MIGHT work, but is not supported.
+Please assume that Poses Extension GGL-Variant will only work with the latest version of GoGo Loco. Any other release MIGHT work, but is not supported.
 
 <Aside>The regular version will work in any case, even in a setup with GoGo Loco.</Aside>
 
