Finished Toolbox Docs

--- a/src/content/docs/toolbox/overview.mdx
+++ b/src/content/docs/toolbox/overview.mdx
@@ -4,7 +4,24 @@ description: Various tools for avatars.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-#### There will be words here, sooner or later.
+### Components
 
-Toolbox is still in development, the documentation will be finished when the time is right.
+Toolbox offers a selection of tools, here is a brief explaination of each.
 
+##### Nameplate Viewer
+When enabled, allows you to see nametags (and possibly other UI) through walls.  
+This component is designed to help you find your friends in bigger worlds.
+
+##### Lights
+Assortment of features to brighten up your view, or the whole scene.  
+*Uses 2 lights.*
+
+##### Wireframe
+Viewpoint overlay which allows you to see an estimated wireframe layout of meshes in the world.
+Might not always be too accurate.  
+*Uses 1 light.*
+
+##### Greenscreen
+Made to be used with Virtual Desktop's Pasthrough Chroma-Cutout feature.  
+Spawns a sphere around you, use the dials to adjust radius and color.  
+Might not work well when the world uses Post Processing, try to turn Post Processing off if it misbehaves.
