--- a/src/content/docs/toolbox/setup.mdx
+++ b/src/content/docs/toolbox/setup.mdx
@@ -6,6 +6,13 @@ import { Aside } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Steps } from '@astrojs/starlight/components';
 
-#### There will be words here, sooner or later.
+### Setup
 
-Toolbox is still in development, the documentation will be finished when the time is right.
+Setup is easy, select your avatar in the hierarchy and add the prefab(s) to your avatar using the toolbar menu.
+
+![Toolbar menu import.](./img/001.png)
+![Prefabs in Hierarchy.](./img/002.png)  
+
+You can choose which [components](/toolbox/overview/) you want, or all of them at once.
+
+Upload and enjoy~
