Updated index, minor typo fix.

--- a/src/content/docs/toolbox/overview.mdx
+++ b/src/content/docs/toolbox/overview.mdx
@@ -6,7 +6,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 ### Components
 
-Toolbox offers a selection of tools, here is a brief explaination of each.
+Toolbox offers a selection of tools, here is a brief explanation of each.
 
 ##### Nameplate Viewer
 When enabled, allows you to see nametags (and possibly other UI) through walls.  
