--- a/src/content/docs/expressionsextension/setup.mdx
+++ b/src/content/docs/expressionsextension/setup.mdx
@@ -13,8 +13,8 @@ Setup is easy, just add the prefab to your avatar and you are ready to go!
 
 ### Which version to pick?
 As you might have seen, there are a couple options to choose from:
-- **Spawn Unsynced Prefab... [VRCFury]:** Your face expression won't sync to other players.
-- **Spawn Synced Prefab... [VRCFury]:** Your face expression will sync.
+- **Spawn Unsynced Prefab...:** Your face expression won't sync to other players.
+- **Spawn Synced Prefab...:** Your face expression will sync.
 
 What version you pick depends on what you will use EE for.  
 In most cases, going for the Unsynced version for photos should be sufficient.  
@@ -24,7 +24,8 @@ In most cases, going for the Unsynced version for photos should be sufficient.
 ### Some items are greyed out!
 EE performs checks to ensure that the necessary component is present in your project.  
 If an option is greyed out, you are missing the dependency needed for that option in your project.  
-VRCFury is needed to use the prefabs, so please import it to proceed.
+You don't need to import all dependencies to use EE, either VRCFury or ModularAvatar is sufficient.
 
 ### Checks  
 VRCFury = Is package `com.vrcfury.vrcfury` present?  
+ModularAvatar = Is package `nadena.dev.modular-avatar` present?  
