[EE] Added mesh notice.

--- a/src/content/docs/expressionsextension/structure.mdx
+++ b/src/content/docs/expressionsextension/structure.mdx
@@ -27,4 +27,6 @@ https://docs.google.com/spreadsheets/d/1mfE8s48pUfjP_rBIPN90_nNkAIBUNcqwIxAdVzPB
 We support both Japanese and English blendshapes.  
 While not all of them are in use in EE, please assume that they might be at some point.
 
+**The mesh containing your face must be called "Body".**
+
 <Aside>Please be aware that Expressions Extension is under constant development, and information in the docs might get outdated.</Aside>
