--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -12,3 +12,7 @@ import { Aside } from '@astrojs/starlight/components';
 Poses Extension is a Locomotion-agnostic pose/emote framework prefilled with various poses made for photography.  
 
 The following pages will tell you some things about the system.
+
+:::note
+All documents are made for BUDDYWORKS Poses Extension 3 or newer.
+:::
