Further additions for Avatar Dynamics

--- a/src/content/docs/avatardynamics/modding.mdx
+++ b/src/content/docs/avatardynamics/modding.mdx
@@ -1,6 +1,6 @@
 ---
 title: BUDDYWORKS Avatar Dynamics - Adding Sounds
-description: Gimmick for face expression mixing, useful for photography.
+description: Free and simple avatar dynamics!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
