--- a/src/content/docs/avatardynamics/setup.mdx
+++ b/src/content/docs/avatardynamics/setup.mdx
@@ -1,6 +1,6 @@
 ---
-title: BUDDYWORKS Expressions Extension - Setup
-description: Gimmick for face expression mixing, useful for photography.
+title: BUDDYWORKS Avatar Dynamics - Setup
+description: Free and simple avatar dynamics!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
