--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -41,4 +41,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     Various tools for avatars.  
     <a class="button" href="/toolbox/intro">Examine<Icon name="right-arrow"/></a>
   </Card>
+  <Card title="Avatar Dynamics" icon="puzzle">
+    Free and simple avatar dynamics!  
+    <a class="button" href="/avatardynamics/intro">Discover<Icon name="right-arrow"/></a>
+  </Card>
 </CardGrid>
