Updated Toolbox Docs to include PlayerMover

--- a/src/content/docs/toolbox/overview.mdx
+++ b/src/content/docs/toolbox/overview.mdx
@@ -25,3 +25,6 @@ Might not always be too accurate.
 Made to be used with Virtual Desktop's Pasthrough Chroma-Cutout feature.  
 Spawns a sphere around you, use the dials to adjust radius and color.  
 Might not work well when the world uses Post Processing, try to turn Post Processing off if it misbehaves.
+
+##### PlayerMove
+Station that can move players to otherwise unreachable places.
